Send the solution to the pool server if it is correct (#2)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,17 @@
 # https://www.playframework.com/documentation/latest/Configuration
 
-ergo.node.host="http://localhost"
-ergo.node.host=${?ERGO_NODE_HOST}
+play.http.secret.key="QCY?tAnfk?aZ?iwrNwnxIlR6CTf:G3gf:90Latabg@5241AB`R5W:1uDFN];Ik@n"
 
-ergo.node.api.port=9053
-ergo.node.api.port=${?ERGO_NODE_API_PORT}
+# Ergo Node Config
+ergo.node.connection="http://localhost:9053"
+
+ergo.node.protocol=${?ERGO_NODE_CONNECTION}
+
+# Pool Server Config
+pool.server.connection="http://localhost:8000"
+pool.server.solution.route="/mining/solution"
+
+pool.server.host=${?POOL_SERVER_CONNECTION}
+pool.server.solution.route=${?POOL_SERVER_SOLUTION_ROUTE}
+
+log.not.json.body="false" # true/false
