--- a/conf/test.conf
+++ b/conf/test.conf
@@ -1,8 +1,13 @@
 # https://www.playframework.com/documentation/latest/Configuration
 
-ergo.node.host="http://www.mocky.io"
+# Ergo Node Config
+ergo.node.connection="http://www.mocky.io"
 
-ergo.node.api.port=80
+# Pool Server Config
+pool.server.connection="http://www.mocky.io"
+pool.server.solution.route="/v2/5dbb0fa4300000df11029441"
 
+# Test routes
 test.route1="/v2/5dbb0fa4300000df11029441"
 test.route2="/v2/5dbd6456330000305c16a1a6"
+test.route400="/v2/5dc2f4be2f00006ee34be51f"
