Return pb in response of the route /mining/cadidate

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,8 +10,10 @@ ergo.node.protocol=${?ERGO_NODE_CONNECTION}
 # Pool Server Config
 pool.server.connection="http://localhost:8000"
 pool.server.solution.route="/mining/solution"
+pool.server.difficulty=7.991447316561134E63
 
 pool.server.host=${?POOL_SERVER_CONNECTION}
 pool.server.solution.route=${?POOL_SERVER_SOLUTION_ROUTE}
+pool.server.difficulty=${?POOL_SERVER_DIFFICULTY}
 
 log.not.json.body="false" # true/false
