--- a/conf/test.conf
+++ b/conf/test.conf
@@ -6,6 +6,7 @@ ergo.node.connection="http://www.mocky.io"
 # Pool Server Config
 pool.server.connection="http://www.mocky.io"
 pool.server.solution.route="/v2/5dbb0fa4300000df11029441"
+pool.server.difficulty=7.991447316561134E63
 
 # Test routes
 test.route1="/v2/5dbb0fa4300000df11029441"
