Fix: send 500 if a thread is in the middle of creating proof and fix body parser for sending share (Fix #14)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,6 +14,10 @@ play: {
         # log all or only json request and responses
         only_json: "true"
     }
+    filters.hosts {
+      # Allow requests to example.com, its subdomains, and localhost:9000.
+      allowed = ["localhost:9000"]
+    }
 }
 
 # Node Config
@@ -35,15 +39,15 @@ pool: {
     # Pool server routes
     route: {
         # Route for sending the proof
-        proof: "/api/header/",
+        proof: "/api/header.json/",
         # Route for sending solutions and shares
-        solution: "/api/share/",
+        solution: "/api/share.json/",
         # Route for sending generated transactions
-        new_transaction: "/wallet/transaction/generate"
+        new_transaction: "/api/transaction.json/"
     },
     # Pool server transaction config
     transaction: {
-        # Amout of ERG to be send to the pool
+        # Amount of ERG to be send to the pool
         value: 67500000000
     }
 }
