Resolve "actions url"

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,10 @@
 # Play Config
 play: {
     # Server's secret key
-    http.secret.key: "QCY?tAnfk?aZ?iwrNwnxIlR6CTf:G3gf:90Latabg@5241AB`R5W:1uDFN];Ik@n",
+    http: {
+        secret.key: "QCY?tAnfk?aZ?iwrNwnxIlR6CTf:G3gf:90Latabg@5241AB`R5W:1uDFN];Ik@n",
+        errorHandler: play.api.http.JsonHttpErrorHandler
+    }
     logger: {
         # Set true to ignore logger's config file
         includeConfigProperties: true,
