Feat: add http port in config (#24)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,11 +17,16 @@ play: {
         # log all or only json request and responses
         only_json: "true"
     }
-    filters.hosts {
-      # Allow requests to example.com, its subdomains, and localhost:9000.
-      allowed = ["localhost", "127.0.0.1", "10.10.10.195"]
+    filters {
+        hosts {
+          # Allow requests to example.com, its subdomains, and localhost:9000.
+          allowed = ["localhost", "127.0.0.1", "10.10.10.195"]
+        }
+        disabled += play.filters.csrf.CSRFFilter
     }
 }
+
+http.port: 9000
 
 # Node Config
 node: {
