Get specific configuration from the pool server (#18)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -48,6 +48,8 @@ pool: {
         solution: "/api/share.json/",
         # Route for getting pool configurations
         config: "/api/config/value.json/",
+        # Route for getting pool specific configurations
+        specific_config: "/api/config/value/<pk>.json/",
         # Route for sending generated transactions
         new_transaction: "/api/transaction.json/"
     },
