Fix: load pool config using startup singleton and eager loading (#31)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,6 +24,7 @@ play: {
         }
         disabled += play.filters.csrf.CSRFFilter
     }
+    modules.enabled += "helpers.EagerLoaderModule"
 }
 
 http.port: 9000
