--- a/conf/test.conf
+++ b/conf/test.conf
@@ -3,3 +3,5 @@ include "application.conf"
 node.connection: "http://localhost:9001"
 
 pool.connection: "http://localhost:9002"
+
+mnemonic.filename: "test_mnemonic"
