Feat: remove unwanted pool routes from application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,7 +38,6 @@ node: {
     # Addresses for protection script
     address: {
         miner: "m/1/1",
-        lock: "m/1/2",
         withdraw: "m/1/3"
     }
 }
@@ -49,15 +48,11 @@ pool: {
     connection: "http://46.4.17.81",
     # Pool server routes
     route: {
-        # Route for sending the proof
-        proof: "/api/header.json/",
         # Route for sending solutions and shares
-        solution: "/api/share.json/",
+        share: "/api/validation.json/",
         # Route for getting pool configurations
         config: "/api/config/value.json/",
         # Route for getting pool specific configurations
-        specific_config: "/api/config/value/<pk>.json/",
-        # Route for sending generated transactions
-        new_transaction: "/api/transaction.json/"
-    },
+        specific_config: "/api/config/value/<pk>.json/"
+    }
 }
