Feat: create transaction with appkit (#37) (some TODO should being resolved)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,17 @@ before_script:
   - apt-get update -qy
   - apt-get upgrade -y
   - apt-get install -y --no-install-recommends sbt
+  - apt-get install git -y
+  - apt-get install wget -
+  - cd ~
+  - echo $JAVA_HOME
+  - wget https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-19.3.1/graalvm-ce-java8-linux-amd64-19.3.1.tar.gz
+  - tar -xf graalvm-ce-java8-linux-amd64-19.3.1.tar.gz
+  - git clone --single-branch --branch develop https://github.com/aslesarenko/ergo-appkit.git
+  - cd ergo-appkit
+  - rm -rf target 2> /dev/null
+  - JAVA_HOME=/root/graalvm-ce-java8-19.3.1 sbt publishLocal
+
 
 stages:
   - test
