proxy version 2 new approach store all user boxes and blocks handle forks

--- a/conf/reference.conf
+++ b/conf/reference.conf
@@ -1,3 +1,5 @@
+include "ebean.conf"
+
 # Play Config
 play: {
     logger: {
@@ -43,3 +45,17 @@ pool: {
 }
 
 node.address.withdraw: "m/1/2"
+
+proxy.transaction.boxConfirmation: 3
+
+db.default.driver = "org.sqlite.JDBC"
+db.default.url = "jdbc:sqlite:sqlite.db"
+db.default.hikaricp.connectionInitSql="PRAGMA foreign_keys = ON"
+
+play.evolutions.db.default {
+  enabled = true
+  autocommit = true
+  useLocks = false
+  autoApplyDowns = true
+  autoApply = true
+}
