--- a/conf/test.conf
+++ b/conf/test.conf
@@ -5,3 +5,5 @@ node.connection: "http://localhost:9001"
 pool.connection: "http://localhost:9002"
 
 mnemonic.filename: "test_mnemonic"
+
+db.default.url = "jdbc:sqlite:test.db"
