improve send share and add dashboard to proxy

--- a/conf/reference.conf
+++ b/conf/reference.conf
@@ -46,11 +46,13 @@ pool: {
 
 node.address.withdraw: "m/1/2"
 
-proxy.transaction.boxConfirmation: 3
+# will use boxes with confirmation number bigger than the following to create pool transaction
+# increasing this will decrease invalid share numbers but proxy will get more time to start working for the first time!
+proxy.transaction.boxConfirmation: 1
 
 db.default.driver = "org.sqlite.JDBC"
 db.default.url = "jdbc:sqlite:sqlite.db"
-db.default.hikaricp.connectionInitSql="PRAGMA foreign_keys = ON"
+db.default.hikaricp.connectionInitSql = "PRAGMA foreign_keys = ON"
 
 play.evolutions.db.default {
   enabled = true
